--- a/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
+++ b/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(4, 4, 5);
+    background: rgb(14, 14, 36);
 }
 
 a {
@@ -17,7 +17,7 @@ a {
 h1 {
     position: relative;
     text-align: center;
-    color: #cae8e9;
+    color: #ecf3f3;
     font-size: 50px;
     font-family: "Calibri", sans-serif;
 }
@@ -27,7 +27,7 @@ p {
     font-weight: 300;
     text-align: center;
     font-size: 18px;
-    color: #a6b5d6;
+    color: #e5eeef;
     margin-bottom: 40px;
 }
 
@@ -80,8 +80,8 @@ p {
 }
 
 .btn-1:hover {
-    background-color: #db3434;
-    border: #440202;
+   /*background-color: #db3434;
+   border: #440202; */
     border-radius: 50%;
     padding: 25px 35px;
     font-size: 16px;
@@ -100,13 +100,13 @@ p {
     font-size: 14px;
     perspective: 2000px;
     transform-style: preserve-3d;
-    border: solid 2px rgb(12, 3, 53);
+    border: solid 2px rgb(33, 25, 68);
     transition: border-color 0.5s; /* add transition effect to border color */
   }
 
   .btn-2:hover {
-    background-color: #610543;
-    border:solid 2px #a6b5d6;
+    background-color: #2161c7;
+    border:solid 2px #5572b0;
     transform: rotateY(50deg)
   }
   
